--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -104,8 +104,8 @@ html {
 .nav {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 0.5fr 0.5fr 1fr;
-  grid-template-rows: repeat(8, 0.4fr);
+  grid-template-columns: 1fr 0.7fr 0.7fr 1fr;
+  grid-template-rows: repeat(8, 0.5fr);
   grid-template-areas: "... ...      ...      ..." "... logo     logo     ..." "... ...      ...      ..." "... entrada  entrada  ..." "... woks     woks     ..." "... sushi    sushi    ..." "... contacto contacto ..." "... ...      ...      ...";
   align-items: center;
   gap: 2em;
@@ -199,7 +199,7 @@ html {
 }
 
 #body_wok {
-  background-image: url(/imagenes/fondo5.png);
+  background-image: url(../imagenes/fondo5.png);
   background-repeat: no-repeat;
   background-size: 500px;
   background-position: 0% 300%;
@@ -287,8 +287,18 @@ html {
   flex-direction: column;
   gap: 1rem;
 }
+@media screen and (max-width: 576px) {
+  #body_sushi .sushi_borde {
+    gap: 0.8rem;
+  }
+}
 #body_sushi .cantidad {
   font-size: 1.5em;
+}
+@media screen and (max-width: 576px) {
+  #body_sushi .cantidad {
+    font-size: 1em;
+  }
 }
 
 .sushi_imagen {
@@ -307,10 +317,6 @@ html {
 /*pagina rolls*/
 #body_rolls {
   background-color: #F2AEBB;
-  background-image: url(/imagenes/logo\ fondo.png);
-  background-size: 500px;
-  background-repeat: no-repeat;
-  background-position: 95% 1150%;
 }
 #body_rolls h2 pre {
   text-transform: uppercase;
@@ -324,12 +330,23 @@ html {
   color: transparent;
   text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.4), 0px -1px 1px rgba(0, 0, 0, 0.3);
 }
+@media screen and (max-width: 576px) {
+  #body_rolls h2 pre {
+    font-size: 25px;
+  }
+}
 #body_rolls .hot_roll {
   margin: 5px;
   background-color: orangered;
   color: whitesmoke;
   padding: 5px;
   border-radius: 0.8em;
+}
+@media screen and (max-width: 576px) {
+  #body_rolls .hot_roll {
+    font-size: 10px;
+    padding: 3px;
+  }
 }
 #body_rolls .salsa_wasabi {
   background-color: #F2AEBB;
@@ -338,6 +355,7 @@ html {
   margin: 3px;
 }
 #body_rolls .precio2 pre {
+  font-size: 13px;
   width: 100%;
   height: 35px;
   display: flex;
@@ -354,9 +372,20 @@ html {
   padding: 10px;
   border-radius: 0.8em;
 }
+@media screen and (max-width: 576px) {
+  .imagen_rol {
+    margin: 0px;
+    padding: 2px;
+  }
+}
 .imagen_rol img {
   width: 450px;
   border-radius: 0.8em;
+}
+@media screen and (max-width: 576px) {
+  .imagen_rol img {
+    width: 300px;
+  }
 }
 
 /*fin paginas rolls*/
@@ -369,6 +398,11 @@ html {
 }
 #menu_conocenos #mapa {
   margin-top: 25px;
+}
+@media screen and (max-width: 576px) {
+  #menu_conocenos #mapa iframe {
+    width: 270px;
+  }
 }
 
 /*cuadrado instagram*/
@@ -518,7 +552,7 @@ html {
 }
 @media screen and (max-width: 576px) {
   .redes ul > li > i {
-    font-size: 18px;
+    font-size: 25px;
   }
 }
 
@@ -541,16 +575,34 @@ html {
 .boton_flotante img {
   width: 50px;
 }
+@media screen and (max-width: 576px) {
+  .boton_flotante img {
+    width: 30px;
+  }
+}
 
 #boton_sushi {
-  right: -5px;
+  right: 0px;
 }
 #boton_sushi img {
-  width: 130px;
+  width: 70px;
+}
+@media screen and (max-width: 576px) {
+  #boton_sushi img {
+    width: 60px;
+  }
 }
 
+#boton_conocenos {
+  right: 3px;
+}
 #boton_conocenos img {
-  width: 100px;
+  width: 70px;
+}
+@media screen and (max-width: 576px) {
+  #boton_conocenos img {
+    width: 50px;
+  }
 }
 
 .boton_flotante:hover {
@@ -768,6 +820,12 @@ html {
   grid-template-areas: "...    ...    ..." "kani   kani   pkani" "lango  lango  plango" "salmn  salmn  psalmon" "temp   temp   ptemp" "veggie veggie pveggie" "...    ing    ing";
   gap: 1em;
 }
+@media screen and (max-width: 576px) {
+  .bowl-menu {
+    font-size: 13px;
+    gap: 0.7em;
+  }
+}
 
 #kani {
   grid-area: kani;
@@ -834,8 +892,18 @@ html {
 .sushi_menu #deli {
   grid-area: deli;
 }
+@media screen and (max-width: 576px) {
+  .sushi_menu #deli {
+    font-size: 20px;
+  }
+}
 .sushi_menu #p {
   grid-area: p;
+}
+@media screen and (max-width: 576px) {
+  .sushi_menu #p {
+    font-size: 13px;
+  }
 }
 .sushi_menu #x12 {
   grid-area: x12;
@@ -870,6 +938,11 @@ html {
 .sushi_menu #p2 {
   grid-area: p2;
 }
+@media screen and (max-width: 576px) {
+  .sushi_menu #p2 {
+    font-size: 12px;
+  }
+}
 
 .only_salmon {
   display: grid;
@@ -880,11 +953,28 @@ html {
   grid-template-areas: "... ... ...  ...   ...   ..." "only only only  only only ..." "... on12 on12 on12  on12 on12p" "... ... ...   ...   ...  ..." "... on24 on24 on24  on24 on24p" "... ... ...   ...   ...  ..." "... on36 on36 on36  on36 on36p" "... ... ...  ...   ...   ...";
   /*fin Only Salmon*/
 }
+@media screen and (max-width: 576px) {
+  .only_salmon {
+    grid-template-columns: 0.2fr 0.5fr 0.5fr 0.5fr 1fr 1fr;
+    grid-template-rows: repeat(1, 0.5fr, 7, 1fr);
+    grid-template-areas: "... ... ...  ...   ...   ..." "only only only  only only only" "on12 on12 on12 on12  on12 on12p" "... ... ...   ...   ...  ..." "on24 on24 on24 on24  on24 on24p" "... ... ...   ...   ...  ..." "on36 on36 on36 on36  on36 on36p" "... ... ...  ...   ...   ...";
+  }
+}
 .only_salmon #only {
   grid-area: only;
 }
+@media screen and (max-width: 576px) {
+  .only_salmon #only {
+    font-size: 20px;
+  }
+}
 .only_salmon #on12 {
   grid-area: on12;
+}
+@media screen and (max-width: 576px) {
+  .only_salmon #on12 {
+    font-size: 12px;
+  }
 }
 .only_salmon #on12p {
   grid-area: on12p;
@@ -892,11 +982,21 @@ html {
 .only_salmon #on24 {
   grid-area: on24;
 }
+@media screen and (max-width: 576px) {
+  .only_salmon #on24 {
+    font-size: 12px;
+  }
+}
 .only_salmon #on24p {
   grid-area: on24p;
 }
 .only_salmon #on36 {
   grid-area: on36;
+}
+@media screen and (max-width: 576px) {
+  .only_salmon #on36 {
+    font-size: 12px;
+  }
 }
 .only_salmon #on36p {
   grid-area: on36p;
@@ -909,11 +1009,28 @@ html {
   grid-template-areas: "...  ...   ...   ...   ...   ... ..." "prem prem  prem  prem  prem  ... ..." "...  pprem pprem pprem pprem ... ..." "...  p12   p12p  p24   p24p  p36 p36p" "...  ...   ...   ...   ...   ... ...";
   /*fin Combi Premiun*/
 }
+@media screen and (max-width: 576px) {
+  .combi_premium {
+    grid-template-columns: 0.2fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr;
+    grid-template-rows: repeat(1, 0.5fr, 4, 1 fr);
+    grid-template-areas: "...  ...   ...   ...   ...   ... ..." "prem prem  prem  prem  prem  prem ..." "...  pprem pprem pprem pprem pprem ..." "...  p12   p12p  p24   p24p  p36 p36p" "...  ...   ...   ...   ...   ... ...";
+  }
+}
 .combi_premium #prem {
   grid-area: prem;
 }
+@media screen and (max-width: 576px) {
+  .combi_premium #prem {
+    font-size: 20px;
+  }
+}
 .combi_premium #pprem {
   grid-area: pprem;
+}
+@media screen and (max-width: 576px) {
+  .combi_premium #pprem {
+    font-size: 13px;
+  }
 }
 .combi_premium #p12 {
   grid-area: p12;
@@ -943,8 +1060,21 @@ html {
   grid-template-areas: "... ...  ...   ...  ..." "veg veg  veg   veg  ..." "vegp vegp vegp vegp ..." "vegp vegp vegp vegp pvegp" "... ...  ...   ...  ...";
   /*fin Combi Veggie*/
 }
+@media screen and (max-width: 576px) {
+  .combi_veggie {
+    font-size: 12px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(1, 0.5fr, 5, 1fr);
+    grid-template-areas: "... ...  ...   ...  ..." "veg veg  veg   veg  veg" "vegp vegp vegp vegp ..." "vegp vegp vegp vegp pvegp" "... ...  ...   ...  ...";
+  }
+}
 .combi_veggie #veg {
   grid-area: veg;
+}
+@media screen and (max-width: 576px) {
+  .combi_veggie #veg {
+    font-size: 20px;
+  }
 }
 .combi_veggie #vegp {
   grid-area: vegp;
@@ -961,8 +1091,18 @@ html {
   grid-template-areas: "... ... ... ... ..." "d6  d6  d6  d6  p6" "d6p d6p d6p d6p d6p" "... ... ... ... ...";
   /*fin Degustación*/
 }
+@media screen and (max-width: 576px) {
+  .degust {
+    font-size: 12px;
+  }
+}
 .degust #d6 {
   grid-area: d6;
+}
+@media screen and (max-width: 576px) {
+  .degust #d6 {
+    font-size: 20px;
+  }
 }
 .degust #d6p {
   grid-area: d6p;
@@ -978,11 +1118,22 @@ html {
   justify-content: center;
   align-items: flex-end;
 }
+@media screen and (max-width: 576px) {
+  #menu_rolls {
+    font-size: 12px;
+  }
+}
 
 #menu_cinco {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 576px) {
+  #menu_cinco {
+    font-size: 12px;
+    align-items: flex-end;
+  }
 }
 
 /*fin pagina rolls*/
@@ -990,5 +1141,11 @@ html {
 #conocenos {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+}
+
+#contacto-kanpeki {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }/*# sourceMappingURL=estilo.css.map */
