--- a/estilos/partials/_index.scss
+++ b/estilos/partials/_index.scss
@@ -72,7 +72,7 @@ html{
 .nav{
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 0.7fr 0.7fr 1fr;
+    grid-template-columns: 1fr 0.3fr 0.3fr 1fr;
     grid-template-rows: repeat(8, 0.5fr);
     grid-template-areas: 
     "... ...      ...      ..."
@@ -85,6 +85,10 @@ html{
     "... ...      ...      ...";
     align-items: center;
     gap: 2em;
+
+    @include tablet {
+        grid-template-columns: 1fr 0.7fr 0.7fr 1fr;
+    }
 }
 .nav > div{
     display: flex;
@@ -107,8 +111,9 @@ html{
     overflow: hidden;
     cursor: pointer;
     z-index: 1;
-    font-weight: 300;
-    font-size: 10px;
+    font-weight: 600;
+    font-size: 11px;
+    text-transform: uppercase;
     color: var(--color);
 }
 .boton::after, .boton::before {
