--- a/estilos/partials/_main.scss
+++ b/estilos/partials/_main.scss
@@ -7,11 +7,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
 #body_wok{
-    background-image: url(../imagenes/fondo5.png);
-    background-repeat: no-repeat;
-    background-size: 500px;
-    background-position: 0% 300%;
+    background-image: url(/imagenes/fondo\ wok.jpg);
+    background-size: contain;
+    background-repeat: repeat;
 
     @include mobile {
         background-size: 300px;
@@ -63,8 +63,6 @@
         justify-content: space-around;
         align-items: center;
         border-radius: 50px;
-        box-shadow:  20px 20px 60px #bebebe,
-                    -20px -20px 60px #ffffff;
 
         @include mobile {
             font-size: 13px;
@@ -93,6 +91,9 @@
 /*pagina sushi & Bowls*/
 #body_sushi{
     background-color: $Color2;
+    background-image: url(/imagenes/fondo\ combinados.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 
     .sushi_borde{
         display: flex;
@@ -127,6 +128,9 @@
 }
 /*pagina rolls*/
 #body_rolls{
+    background-image: url(/imagenes/fondo\ roll.jpg);
+    background-size: cover;
+    background-repeat: repeat;
     background-color: $Color5;
 
     h2{
