--- a/estilos/partials/_variables.scss
+++ b/estilos/partials/_variables.scss
@@ -4,7 +4,7 @@ $fontMain: 'Montserrat', sans-serif;
 $font2: 'Roboto', sans-serif;;
 
 $Color1: #04bfbfe1;
-$Color2: #91f872;
+$Color2: #ab4c93;
 $Color3: #401A39;
 $Color4: #D952AA;
 $Color5: #F2AEBB;
