--- a/estilos/partials/_header.scss
+++ b/estilos/partials/_header.scss
@@ -1,11 +1,12 @@
 .navbar{
-    background-color: #04bfbfee !important;
+    background-color: #04bfbf31 !important;
     
     .navbar-brand img{
         width: 150px;
     }
     
     .nav-link{
-        font-size: 15px;
+        font-size: 18px;
+        font-weight: 600;
     }
 }
