--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -185,13 +185,14 @@ html {
 
 /*fin estilo menú*/
 .navbar {
-  background-color: rgba(4, 191, 191, 0.9333333333) !important;
+  background-color: rgba(4, 191, 191, 0.1921568627) !important;
 }
 .navbar .navbar-brand img {
   width: 150px;
 }
 .navbar .nav-link {
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 /*pagina entrada & Woks*/
@@ -206,19 +207,24 @@ html {
 
 #body_wok {
   background-image: url(/imagenes/fondo\ wok.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
 }
 @media screen and (max-width: 576px) {
   #body_wok {
-    background-size: 300px;
-    background-position: 15% 250%;
+    background-size: cover;
+    background-repeat: repeat;
   }
 }
 
 .menu-main {
   width: 500px;
   padding: 1.5rem;
+}
+@media screen and (max-width: 576px) {
+  .menu-main {
+    padding: 0.5rem;
+  }
 }
 
 .menu-carta {
@@ -237,8 +243,8 @@ html {
 .menu-carta .menu-titulo h2 {
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
-  font-weight: bold;
-  font-size: 35px;
+  font-weight: 700;
+  font-size: 40px;
   background: #202020;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -289,6 +295,11 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 576px) {
+  #body_sushi {
+    background-size: cover;
+  }
+}
 #body_sushi .sushi_borde {
   display: flex;
   flex-direction: column;
@@ -326,12 +337,11 @@ html {
   background-image: url(/imagenes/fondo\ roll.jpg);
   background-size: cover;
   background-repeat: repeat;
-  background-color: #F2AEBB;
 }
 #body_rolls h2 pre {
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 35px;
   background: #202020;
   -webkit-background-clip: text;
@@ -342,7 +352,7 @@ html {
 }
 @media screen and (max-width: 576px) {
   #body_rolls h2 pre {
-    font-size: 25px;
+    font-size: 26px;
   }
 }
 #body_rolls .hot_roll {
@@ -486,7 +496,7 @@ html {
 .foot {
   width: 100%;
   padding: 20px;
-  background-color: rgba(4, 191, 191, 0.9647058824);
+  background-color: rgba(4, 191, 191, 0.2196078431);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -536,15 +546,15 @@ html {
 }
 @media screen and (max-width: 576px) {
   .redes .iconos-redes {
-    gap: 0.9rem;
+    gap: 0.5rem;
   }
 }
 .redes .iconos-redes pre {
-  font-size: 15px;
+  font-size: 12px;
 }
 @media screen and (max-width: 576px) {
   .redes .iconos-redes pre {
-    font-size: 9px;
+    font-size: 8px;
   }
 }
 .redes .instagram a {
@@ -734,7 +744,8 @@ html {
 /*fin de entradas*/
 /*diseño carrusel entradas*/
 .carousel-item img {
-  padding-top: 30px;
+  border-radius: 1em;
+  margin-top: 30px;
   height: 500px;
 }
 @media screen and (max-width: 760px) {
@@ -1146,7 +1157,7 @@ html {
 }
 @media screen and (max-width: 576px) {
   #menu_rolls {
-    font-size: 12px;
+    font-size: 15px;
   }
 }
 
@@ -1157,8 +1168,8 @@ html {
 }
 @media screen and (max-width: 576px) {
   #menu_cinco {
-    font-size: 12px;
-    align-items: flex-end;
+    font-size: 15px;
+    align-items: center;
   }
 }
 
