--- a/estilos/partials/_positions.scss
+++ b/estilos/partials/_positions.scss
@@ -159,7 +159,8 @@
 /*diseño carrusel entradas*/
 
 .carousel-item img{
-    padding-top: 30px;
+    border-radius: 1em;
+    margin-top: 30px;
     height: 500px;
 
     @include tablet {
@@ -614,7 +615,7 @@
     align-items: flex-end;
 
     @include mobile {
-        font-size: 12px;
+        font-size: 15px;
     }
 }
 #menu_cinco{
@@ -623,8 +624,8 @@
     align-items: center;
 
     @include mobile {
-        font-size: 12px;
-        align-items: flex-end;
+        font-size: 15px;
+        align-items: center;
     }
 }
 /*fin pagina rolls*/
