--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -206,7 +206,7 @@ html {
 }
 
 #body_wok {
-  background-image: url(../../imagenes/fondo\ wok.jpg);
+  background-image: url(../imagenes/fondo\ wok.jpg);
   background-size: cover;
   background-repeat: repeat;
 }
@@ -218,7 +218,7 @@ html {
 }
 
 .menu-main {
-  width: 500px;
+  width: 470px;
   padding: 1.5rem;
 }
 @media screen and (max-width: 576px) {
@@ -291,7 +291,7 @@ html {
 /*pagina sushi & Bowls*/
 #body_sushi {
   background-color: #ab4c93;
-  background-image: url(../../imagenes/fondo\ combinados.jpg);
+  background-image: url(../imagenes/fondo\ combinados.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -334,7 +334,7 @@ html {
 
 /*pagina rolls*/
 #body_rolls {
-  background-image: url(../../imagenes/fondo\ roll.jpg);
+  background-image: url(../imagenes/fondo\ roll.jpg);
   background-size: cover;
   background-repeat: repeat;
 }
@@ -746,7 +746,7 @@ html {
 .carousel-item img {
   border-radius: 1em;
   margin-top: 30px;
-  height: 500px;
+  height: 600px;
 }
 @media screen and (max-width: 760px) {
   .carousel-item img {
@@ -755,7 +755,7 @@ html {
 }
 @media screen and (max-width: 576px) {
   .carousel-item img {
-    height: 400px;
+    height: 500px;
   }
 }
 
